--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ edition = "2021"
 [dependencies]
 amlich = { path = "amlich", version = "0.1.0" }
 vncalendar = { path = "vncalendar", version = "0.1.0" }
+actix-web = "4.9.0"
+serde_json = "1.0"
+serde = { version = "1", features = ["derive"] }
