--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ chrono = "0.4.26"
 amlich = { path = "amlich", version = "0.1.0" }
 vncalendar = { path = "vncalendar", version = "0.1.0" }
 actix-web = "4.9.0"
-serde_json = "1.0"
-serde = { version = "1", features = ["derive"] }
+serde_json = "1.0.126"
+serde = { version = "1.0.207", features = ["derive"] }
+serde_with = "3.9.0"
