--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ name = "ramlich"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+edition = "2021"
+name = "apiserver"
+path = "src/main.rs"
+
 [dependencies]
 chrono = "0.4.26"
 amlich = { path = "amlich", version = "0.1.0" }
