--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ actix-web = "4.9.0"
 serde_json = "1.0.126"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_with = "3.9.0"
+env_logger = "0.11.5"
