--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ serde_json = "1.0.126"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_with = "3.9.0"
 env_logger = "0.11.5"
+utoipa = "4.2.3"
+utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
