--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,13 @@ utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
 rdkafka = "0.36.2"
 uuid = { version = "1.10.0", features = ["v4"] }
 once_cell = "1.19.0"
+confik = "0.11"
+deadpool-postgres = { version = "0.14.0", features = ["serde"] }
+tokio-postgres = "0.7.6"
+tokio-pg-mapper = "0.2.0"
+tokio-pg-mapper-derive = "0.2.0"
+derive_more = { version = "1.0.0", features = ["full"] }
+async-trait = "0.1.82"
 
 [dev-dependencies]
 mockall = "0.13.0"
