--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,11 +37,12 @@ uuid = { version = "1.10.0", features = ["v4"] }
 once_cell = "1.19.0"
 confik = "0.11"
 deadpool-postgres = { version = "0.14.0", features = ["serde"] }
-tokio-postgres = "0.7.6"
+tokio-postgres = { version = "0.7.6", features=["with-uuid-0_8"]}
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
 derive_more = { version = "1.0.0", features = ["full"] }
 async-trait = "0.1.82"
+strum = { version = "0.26", features = ["derive"] }
 
 [dev-dependencies]
 mockall = "0.13.0"
