--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ log = "0.4.22"
 utoipa = "4.2.3"
 utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
 rdkafka = "0.36.2"
-uuid = { version = "1.10.0", features = ["v4"] }
-once_cell = "1.19.0"
+uuid = { version = "1.10.0", features = ["v4", "serde"] }
+once_cell = "1.20.0"
 confik = "0.11"
 deadpool-postgres = { version = "0.14.0", features = ["serde"] }
-tokio-postgres = { version = "0.7.6", features=["with-uuid-0_8"]}
+tokio-postgres = { version = "0.7.6", features=["with-uuid-1", "with-serde_json-1"]}
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
 derive_more = { version = "1.0.0", features = ["full"] }
