--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ name = "event_consumer"
 path = "src/bin/event_consumer.rs"
 
 [dependencies]
-chrono = "0.4.26"
+chrono = {version = "0.4.26", features=["serde"] }
 amlich = { path = "amlich", version = "0.1.0" }
 vncalendar = { path = "vncalendar", version = "0.1.0" }
 actix-web = "4.9.0"
@@ -37,7 +37,7 @@ uuid = { version = "1.10.0", features = ["v4", "serde"] }
 once_cell = "1.20.0"
 confik = "0.11"
 deadpool-postgres = { version = "0.14.0", features = ["serde"] }
-tokio-postgres = { version = "0.7.6", features=["with-uuid-1", "with-serde_json-1"]}
+tokio-postgres = { version = "0.7.12", features=["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"]}
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
 derive_more = { version = "1.0.0", features = ["full"] }
