--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,32 +74,53 @@ services:
     ports:
       - "5432:5432"
 
-  apiserver:
-    image: ramlich:latest
-    build:
-      dockerfile: Dockerfile
+  unleashserver:
+    image: unleashorg/unleash-server:latest
     ports:
-      - "8181:8181"
-    depends_on:
-      - kafka
-      - schema
-    links:
-      - kafka
-      - schema
+      - "4242:4242"
     environment:
-      RUST_BROKERS: host.docker.internal:29092
-      KAFKA_ADVERTISED_HOST_NAME: kafka
+      # This points Unleash to its backing database (defined in the `db` section below)
+      DATABASE_URL: "postgres://ramlich:ramlich@postgresql/unleash"
+      # Disable SSL for database connections. @chriswk: why do we do this?
+      DATABASE_SSL: "false"
+      # Changing log levels:
+      LOG_LEVEL: "warn"
+      # Proxy clients must use one of these keys to connect to the
+      # Proxy. To add more keys, separate them with a comma (`key1,key2`).
+      INIT_FRONTEND_API_TOKENS: "default:development.unleash-insecure-frontend-api-token"
+      # Initialize Unleash with a default set of client API tokens. To
+      # initialize Unleash with multiple tokens, separate them with a
+      # comma (`token1,token2`).
+      INIT_CLIENT_API_TOKENS: "default:development.unleash-insecure-api-token"
+    depends_on:
+      - postgresql
+    command: [ "node", "index.js" ]
+  #  apiserver:
+  #    image: ramlich:latest
+  #    build:
+  #      dockerfile: Dockerfile
+  #    ports:
+  #      - "8181:8181"
+  #    depends_on:
+  #      - kafka
+  #      - schema
+  #    links:
+  #      - kafka
+  #      - schema
+  #    environment:
+  #      RUST_BROKERS: host.docker.internal:29092
+  #      KAFKA_ADVERTISED_HOST_NAME: kafka
 
-  event_consumer:
-    image: ramlich_consumer:latest
-    build:
-      dockerfile: consumer.Dockerfile
-    depends_on:
-      - kafka
-      - schema
-    links:
-      - kafka
-      - schema
-    environment:
-      RUST_BROKERS: host.docker.internal:29092
-      KAFKA_ADVERTISED_HOST_NAME: kafka
+  #event_consumer:
+  #  image: ramlich_consumer:latest
+  #  build:
+  #    dockerfile: consumer.Dockerfile
+  #  depends_on:
+  #    - kafka
+  #    - schema
+  #  links:
+  #    - kafka
+  #    - schema
+  #  environment:
+  #    RUST_BROKERS: host.docker.internal:29092
+  #    KAFKA_ADVERTISED_HOST_NAME: kafka
