--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,13 +40,17 @@ deadpool-postgres = { version = "0.14.0", features = ["serde"] }
 tokio-postgres = { version = "0.7.12", features=["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"]}
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
+tokio = { version = "1.24.2", features = ["sync", "io-util"] }
+tokio-stream = { version = "0.1.3", features = ["sync"] }
+futures-util = "0.3.30"
 derive_more = { version = "1.0.0", features = ["full"] }
-async-trait = "0.1.82"
+async-trait = "0.1.83"
 unleash-api-client = {version="0.11.0", features=["reqwest"]}
-enum-map = "2.0.3"
-reqwest = "0.12.7"
+enum-map = "2.0.1"
+reqwest = { version = "0.12.7", features = ["json", "stream"]}
 futures = "0.3.30"
 futures-timer = "3.0.2"
+url = "2.2"
 
 [dev-dependencies]
 mockall = "0.13.0"
