Try out awc http client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ reqwest = { version = "0.12.7", features = ["json", "stream"]}
 futures = "0.3.30"
 futures-timer = "3.0.2"
 url = "2.2"
+awc = { version = "3.2", features=["openssl"] }
 
 [dev-dependencies]
 mockall = "0.13.0"
