--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,11 @@ services:
       - "host.docker.internal:host-gateway"
     links:
       - zk
+    healthcheck:
+      test: nc -z localhost 9092 || exit 1
+      interval: 1s
+      timeout: 60s
+      retries: 60
 
   schema:
     image: "confluentinc/cp-schema-registry:latest"
@@ -73,11 +78,18 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-U", "ramlich", "-d", "ramlich" ]
+      interval: 30s
+      timeout: 60s
+      retries: 5
+      start_period: 80s
 
   unleashserver:
     image: unleashorg/unleash-server:latest
     ports:
       - "4242:4242"
+    restart: on-failure
     environment:
       # This points Unleash to its backing database (defined in the `db` section below)
       DATABASE_URL: "postgres://ramlich:ramlich@postgresql/unleash"
@@ -93,8 +105,15 @@ services:
       # comma (`token1,token2`).
       INIT_CLIENT_API_TOKENS: "default:development.unleash-insecure-api-token"
     depends_on:
-      - postgresql
+      postgresql:
+        condition: service_healthy
     command: [ "node", "index.js" ]
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:4242/health || exit 1
+      interval: 1s
+      timeout: 1m
+      retries: 5
+      start_period: 15s
 
   apiserver:
     image: ramlich:latest
@@ -102,10 +121,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8181:8181"
+    restart: on-failure
     depends_on:
-      - kafka
-      - schema
-      - unleashserver
+      kafka:
+        condition: service_healthy
+      unleashserver:
+        condition: service_healthy
     links:
       - kafka
       - schema
@@ -114,16 +135,37 @@ services:
       RUST_BROKERS: kafka:9092
       KAFKA_ADVERTISED_HOST_NAME: kafka
       RUST_UNLEASH_API_URL: http://unleashserver:4242/api/
-  #event_consumer:
-  #  image: ramlich_consumer:latest
-  #  build:
-  #    dockerfile: consumer.Dockerfile
-  #  depends_on:
-  #    - kafka
-  #    - schema
-  #  links:
-  #    - kafka
-  #    - schema
-  #  environment:
-  #    RUST_BROKERS: host.docker.internal:29092
-  #    KAFKA_ADVERTISED_HOST_NAME: kafka
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:8181/today || exit 1
+      interval: 1s
+      timeout: 1m
+      retries: 5
+      start_period: 15s
+
+  event_consumer:
+    image: ramlich_consumer:latest
+    build:
+      dockerfile: consumer.Dockerfile
+    ports:
+      - "8585:8585"
+    restart: on-failure
+    depends_on:
+      kafka:
+        condition: service_healthy
+      postgresql:
+        condition: service_healthy
+    links:
+      - kafka
+      - schema
+      - postgresql
+    environment:
+      RUST_BROKERS: kafka:9092
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      RUST_UNLEASH_API_URL: http://unleashserver:4242/api/
+      RUST_DB_HOST: postgresql
+    healthcheck:
+      test: nc -z localhost 8585 || exit 1
+      interval: 1s
+      timeout: 1m
+      retries: 5
+      start_period: 15s
