--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
       - 32181
     ports:
       - 32181:32181
-    extra_hosts:
-      - "moby:127.0.0.1"
 
   kafka:
     image: "confluentinc/cp-kafka:latest"
@@ -33,8 +31,6 @@ services:
       - 9092:9092
     depends_on:
       - zk
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     links:
       - zk
     healthcheck:
@@ -51,8 +47,6 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:9092
       SCHEMA_REGISTRY_HOST_NAME: schema
       SCHEMA_REGISTRY_LISTENERS: http://schema:28081
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     ports:
       - 28081:28081
     links:
@@ -67,8 +61,7 @@ services:
         max-size: "5m"
     image: provectuslabs/kafka-ui
     ports:
-      - "8282:8080"
-    restart: always
+      - 8282:8080
 
   postgresql:
     image: "postgres"
@@ -79,23 +72,20 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-U", "ramlich", "-d", "ramlich" ]
-      interval: 30s
+      test: pg_isready -U ramlich -d ramlich || exit 1
+      interval: 1s
       timeout: 60s
-      retries: 5
-      start_period: 80s
+      retries: 60
+      start_period: 30s
 
   unleashserver:
     image: unleashorg/unleash-server:latest
     ports:
-      - "4242:4242"
+      - 4242:4242
     restart: on-failure
     environment:
-      # This points Unleash to its backing database (defined in the `db` section below)
       DATABASE_URL: "postgres://ramlich:ramlich@postgresql/unleash"
-      # Disable SSL for database connections. @chriswk: why do we do this?
       DATABASE_SSL: "false"
-      # Changing log levels:
       LOG_LEVEL: "warn"
       # Proxy clients must use one of these keys to connect to the
       # Proxy. To add more keys, separate them with a comma (`key1,key2`).
@@ -111,8 +101,8 @@ services:
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:4242/health || exit 1
       interval: 1s
-      timeout: 1m
-      retries: 5
+      timeout: 60s
+      retries: 60
       start_period: 15s
 
   apiserver:
@@ -120,7 +110,7 @@ services:
     build:
       dockerfile: Dockerfile
     ports:
-      - "8181:8181"
+      - 8181:8181
     restart: on-failure
     depends_on:
       kafka:
@@ -138,21 +128,22 @@ services:
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8181/healthcheck || exit 1
       interval: 1s
-      timeout: 1m
-      retries: 5
-      start_period: 15s
+      timeout: 60s
+      retries: 60
 
   event_consumer:
     image: ramlich_consumer:latest
     build:
       dockerfile: consumer.Dockerfile
     ports:
-      - "8585:8585"
+      - 8585:8585
     restart: on-failure
     depends_on:
       kafka:
         condition: service_healthy
       postgresql:
+        condition: service_healthy
+      unleashserver:
         condition: service_healthy
     links:
       - kafka
@@ -166,6 +157,5 @@ services:
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8585/healthcheck || exit 1
       interval: 1s
-      timeout: 1m
-      retries: 5
-      start_period: 15s
+      timeout: 60s
+      retries: 60
