--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ deadpool-postgres = { version = "0.14.0", features = ["serde"] }
 tokio-postgres = { version = "0.7.12", features=["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"]}
 tokio-pg-mapper = "0.2.0"
 tokio-pg-mapper-derive = "0.2.0"
-tokio = { version = "1.24.2", features = ["sync", "io-util"] }
+tokio = { version = "1.40.0", features = ["full"] }
 tokio-stream = { version = "0.1.3", features = ["sync"] }
 futures-util = "0.3.30"
 derive_more = { version = "1.0.0", features = ["full"] }
